Fix header to top

--- a/index.html
+++ b/index.html
@@ -114,55 +114,38 @@
                     <button id="see-project-button-first" class="see-project-button" type="button">See Project</button>
                 </div>
             </div>
-
-
-            
-            <div class="cards">
-                
-                <div class="content">
-                    <h2>Profesional Art Printing Data</h2>
-                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
-                        industry's standard</p>
-                    <ul class="languages other-cards-info">
-                        <li><span>html</span></li>
-                        <li><span>bootstrap</span></li>
-                        <li><span>Ruby</span></li>
-                    </ul>
-                </div>
-                <button class="see-project-button" type="button">See Project</button>
-            </div>
-
-
-
-        <div class="project-details-modal-background disappear">
-            <div class="project-details-modal">
-                <div class="project-modal-header">
-                    <div class="modal-head">
-                        <h3 class="modal-heading-mobile">Multi Post Stories</h3>
-                        <h3 class="modal-heading-desktop">Keeping track of hundreds of components website</h3>
-                        <i class="dark-cross-button"></i>
+            <div class="project-details-modal-background disappear">
+                <div class="project-details-modal">
+                    <div class="project-modal-header">
+                        <div class="modal-head">
+                            <h3 class="modal-heading-mobile">Multi Post Stories</h3>
+                            <h3 class="modal-heading-desktop">Keeping track of hundreds of components website</h3>
+                            <i class="dark-cross-button"></i>
+                        </div>
+                        <ul class="languages">
+                            <li><span>html</span></li>
+                            <li><span>Bootstrap</span></li>
+                            <li><span>Ruby on rails</span></li>
+                        </ul>
                     </div>
-                    <ul class="languages">
-                        <li><span>html</span></li>
-                        <li><span>Bootstrap</span></li>
-                        <li><span>Ruby on rails</span></li>
-                    </ul>
-                </div>
-                <div class="modal-content">
-                    <img src="images/portfolio/snapshoot-portfolio.png" alt="Portfolio snapshot image">
-                    <div class="modal-lower-half">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. It has survived not only five
-                            centuries, but also the leap into electronic typesetting, remaining essent</p>
-                        <div class="modal-buttons">
-                            <div class="btns"><span>See Live</span> <i class="live-icon"></i></div>
-                            <div class="btns"><span>See Source</span> <i class="source-icon"></i> </div>
+                    <div class="modal-content">
+                        <img src="images/portfolio/snapshoot-portfolio.png" alt="Portfolio snapshot image">
+                        <div class="modal-lower-half">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                                took a
+                                galley of type and scrambled it to make a type specimen book. It has survived not only
+                                five
+                                centuries, but also the leap into electronic typesetting, remaining essent</p>
+                            <div class="modal-buttons">
+                                <div class="btns"><span>See Live</span> <i class="live-icon"></i></div>
+                                <div class="btns"><span>See Source</span> <i class="source-icon"></i> </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section id="about-me">
         <div class="about-me-introduction">
@@ -228,13 +211,15 @@
             <form action="https://formspree.io/f/mdobdvjd" method="post">
                 <ul>
                     <li>
-                        <input type="text" id="form-name" name="fullName" placeholder="Full name" required maxlength="30">
+                        <input type="text" id="form-name" name="fullName" placeholder="Full name" required
+                            maxlength="30">
                     </li>
                     <li>
                         <input type="email" name="email" placeholder="Email" required>
                     </li>
                     <li>
-                        <textarea name="message" id="form-message" placeholder="Enter text here" required maxlength="500"></textarea>
+                        <textarea name="message" id="form-message" placeholder="Enter text here" required
+                            maxlength="500"></textarea>
                     </li>
                     <li class="btn">
                         <button type="submit" class="btns">Get in touch</button>
