Install Google tag

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3L9BLXRHXB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3L9BLXRHXB');
+    </script>
     <script src="script.js" type="module"></script>
     <title>Jake's Portfolio</title>
 </head>
