--- a/index.html
+++ b/index.html
@@ -110,11 +110,8 @@
         <div class="about-me-introduction">
             <div class="about-me-introduction-content">
                 <h1 class="about-me-heading">About me</h1>
-                <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some
-                    of
-                    my work and experience! If you like what you see and have a project you need coded, don’t hestiate
-                    to
-                    contact me.</p>
+                <p>Full-Stack Software Developer and a tech fanatic. I get intrigued by anything tech related and love solving problems. I also like reading and learning new things and always welcome new challenges.
+                </p>
                 <button class="see-project-button" id="resume-button" type="button">Get My Resume</button>
             </div>
             <div class="background-graphic"></div>
