--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <div id="intro-content">
             <h1>Hey There.<br>I'm Jake</h1>
             <h3>I am a Software Developer</h3>
-            <p>I can help you build a product , feature or website Look through some of my work and experience! If you
-                like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+            <p>I can help you build a feature or website. Look through some of my work and experience! If you'd like to work with me, feel free to <a style="color: white" href="#contact-me">contact me</a>.</p>
         </div>
         <ul class="intro-icons">
             <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons medium"></a>
@@ -73,7 +72,7 @@
             <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0"
                     class="social-icons twitter"></a></li>
             <li><a target="_blank" rel="noopener" href="#" class="social-icons logo"></a></li>
-            <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jason-felice-11a5a622b/"
+            <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jake-felice/"
                     class="social-icons linkedin"></a></li>
             <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons github"></a>
             </li>
@@ -194,7 +193,7 @@
                 <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0"
                         class="social-icons twitter"></a></li>
                 <li><a target="_blank" rel="noopener" href="#" class="social-icons logo"></a></li>
-                <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jason-felice-11a5a622b/"
+                <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jake-felice/"
                         class="social-icons linkedin"></a></li>
                 <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice"
                         class="social-icons github"></a></li>
