Add images to the cards

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="works.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3L9BLXRHXB"></script>
     <script>
@@ -93,7 +94,9 @@
                 <h1 class="about-me-heading">About me</h1>
                 <p>Full-Stack Software Developer and a tech fanatic. I get intrigued by anything tech related and love solving problems. I also like reading and learning new things and always welcome new challenges.
                 </p>
-                <button class="see-project-button" id="resume-button" type="button">Get My Resume</button>
+                <a href="https://docs.google.com/document/d/15-tD6fKjU5Js6XovPWGxbcwkEd5Ps3DOIPoUvAoxrjE/edit?usp=sharing">
+                    <button class="see-project-button" id="resume-button" type="button">Get My Resume</button>
+                </a>
             </div>
             <div class="background-graphic"></div>
         </div>
