--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="about-me-introduction">
             <div class="about-me-introduction-content">
                 <h1 class="about-me-heading">About me</h1>
-                <p>Full-Stack Software Developer and a tech fanatic. I get intrigued by anything tech related and love solving problems. I also like reading and learning new things and always welcome new challenges.
+                <p>Full-Stack Software Developer and a tech fanatic. I get intrigued by anything tech related and love solving problems. I also like reading and learning new things and always welcome new challenges. I'm a huge fan of classic rock n' roll, and sometimes like to play guitar in my free time.
                 </p>
                 <a href="https://docs.google.com/document/d/15-tD6fKjU5Js6XovPWGxbcwkEd5Ps3DOIPoUvAoxrjE/edit?usp=sharing">
                     <button class="see-project-button" id="resume-button" type="button">Get My Resume</button>
