--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </li>
             <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0"
                     class="social-icons twitter"></a></li>
-            <li><a target="_blank" rel="noopener" href="#" class="social-icons logo"></a></li>
+            <li><a target="_blank" rel="noopener" href="https://angel.co/u/jake-felice" class="social-icons logo"></a></li>
             <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jake-felice/"
                     class="social-icons linkedin"></a></li>
             <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons github"></a>
@@ -177,7 +177,7 @@
                 </li>
                 <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0"
                         class="social-icons twitter"></a></li>
-                <li><a target="_blank" rel="noopener" href="#" class="social-icons logo"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://angel.co/u/jake-felice" class="social-icons logo"></a></li>
                 <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jake-felice/"
                         class="social-icons linkedin"></a></li>
                 <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice"
